# Dankgine

./: README.md
dankgine/: .gitignore  Cargo.toml  README.md
dankgine/benches/: example.rs  ten_updates.rs
dankgine/src/: bench.rs  bodies.rs  engine.rs  lib.rs  solver.rs  utils.rs  world.rs
dankgine/src/collisions/: mod.rs
dankgine/src/collisions/broad/: mod.rs  quadtree.rs
dankgine/src/collisions/solvers/: brute_force.rs  mod.rs  quadtree_solver.rs  solver.rs  sweep_and_prune.rs
dankgine/src/core/: engine.rs  mod.rs  solver.rs
dankgine/src/geometry/: mod.rs  rectangle.rs  vector.rs  verlet.rs
debug/: Cargo.toml
debug/src/: main.rs  shapes.rs
debug/src/sketches/: mod.rs  sketch1.rs
verlet-js/: index.html  sketch.js
web-debug/: index.html  sketch.js
web-debug2/: index.html  sketch.js
